Fix table cell gaps and header alignment parity

--- a/inc/plugins/advancedfunctionality/addons/advancededitor/assets/bbcodes/bbcodes/table/table.css
+++ b/inc/plugins/advancedfunctionality/addons/advancededitor/assets/bbcodes/bbcodes/table/table.css
@@ -1,6 +1,7 @@
 /* ====== Rendered table ====== */
 .af-aqr-table {
   border-collapse: collapse;
+  border-spacing: 0;
   width: 100%;
   max-width: 100%;
   margin: 10px 0;
@@ -22,6 +23,7 @@
 
 .af-aqr-table th {
   font-weight: 700;
+  text-align: left;
 
   /* header bg:
      1) --af-tbl-hbg if set
